Introduced new classes to fix gaps in leftside

--- a/CSS/shoppingbasket/basketmycss/basketstyle.scss
+++ b/CSS/shoppingbasket/basketmycss/basketstyle.scss
@@ -128,7 +128,11 @@ nav .fa{
                 border-bottom: 1.5px solid rgba(0, 0, 0, 0.315);
 
                 .products_li {
-                    margin-right: 30vh;
+                    margin-right: 26.5vh;
+                }
+
+                .price_header {
+                    margin-right: 17vh;
                 }
             }
 
@@ -144,16 +148,17 @@ nav .fa{
 
                 img {
                     width:70px;
+                    margin-right: 25vh;
                     
                 }
                 
                 .after_img_li {
-                    margin-left: -15vh;
+                    margin-left: 10vh;
+                    position: absolute;
                 }
 
                 .remaining_li {
-                    display: flex;
-                    row-gap: -10vh;
+                    padding: 0;
                 }
                 
             }
